--- a/usb_jtag/trunk/README
+++ b/usb_jtag/trunk/README
@@ -1,22 +1,22 @@
 -----------------------------------------------------------------------------
 
-usbjtag - Variations on the implementation of a USB JTAG adapter.
+usb_jtag - Variations on the implementation of a USB JTAG adapter.
 
-Copyright (C) 2005,2006 Kolja Waschk, ixo.de
+Copyright (C) 2005-2007 Kolja Waschk, ixo.de
 
 -----------------------------------------------------------------------------
 
-usbjtag is free software; you can redistribute it and/or modify it under the
+usbj_tag is free software; you can redistribute it and/or modify it under the
 terms of the GNU General Public License as published by the Free Software
 Foundation; either version 2 of the License, or (at your option) any later
 version.
 
-usbjtag is distributed in the hope that it will be useful, but WITHOUT ANY
+usbj_tag is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software 
+along with this program as file "COPYING"; if not, write to the Free Software 
 Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA
 
 -----------------------------------------------------------------------------
@@ -34,6 +34,21 @@ enough even if used without Altera software. If you include support for this
 device in your host software, please let me know, so I can mention it in this
 README. And please be so kind to make your software compatible enough so it
 could make use of an original Altera device as well!
+
+-----------------------------------------------------------------------------
+
+FILES: Beside this README, this archive contains the following files:
+
+ - COPYING: The text of the GNU Public License (GPL).
+ - device/fx2: Firmware for usb_jtag based on Cypress FX2
+ - device/cpld: CPLD logic for usb_jtag with FT245BM + CPLD
+ - host/eecksum: Code to compute a valid checksum for FT245BM EEPROM emulation
+ - host/devtest: Small utility to do some basic tests with usb_jtag adapter
+ - host/openocd: Experimental usb_jtag/USB-Blaster driver for OpenOCD
+ - host/openwince: Experimental usb_jtag/USB-Blaster driver for openwince JTAG
+
+Where appropriate, the directories contain a file "readme.txt" with further
+information about purpose, usage and history.
 
 -----------------------------------------------------------------------------
 
@@ -56,62 +71,36 @@ parallel/serial conversion for single bytes.  At that time, I took a look at
 the Altera communication mechanisms and decided to write my code so it would
 behave similar to their device.
 
-I release the code for this homebrew firmware here in the fx2/ subdirectory.
-The "usbjtag.c" file contains a descriptive text about the mechanism how the
-host PC controls the JTAG chain via USB. For people who like to read VHDL
-better than C or English, I also wrote cpld/jtag_logic.vhd. When synthesized
-with Quartus II, its logic fits into an EPM7064 CPLD and can interface to a
-FTDI FT245BM USB controller. Both variants haven't been gone through thorough
-testing, so please do not consider it "production quality". I have used it
-only for JTAG, and haven't tested ASMI (Active Serial) mode at all. Maybe some
-more lines of code have to be added for ASMI.
+-----------------------------------------------------------------------------
+
+COMMON ISSUES: I've received some mails from others who used my logic with
+varying success. Following are some general tips.
+
+If it works "partially" for you, "sometimes" or "it programs the device, but
+the device doesn't work afterwards", your setup maybe isn't suitable for clear
+transmission of signals at several MHz. It may still be a critical timing in
+the logic, but I'm using it even slightly "overclocked" at 25 MHz and haven't
+had any errors since months. So I doubt it's the logic. Try reducing the clock
+to the CPLD from 24 MHz to, say, 6 MHz.
+
+When using AS mode with a FPGA connected in parallel with a configuration
+device (or similar setup), don't forget to connect nCE and nCS.
+
+Whenever I experienced problems, it was due to wrong connections, bad
+pullup/pulldown resistors on the target JTAG interface, or mismatch between
+logic levels (3.3/5 V) of CPLD vs. target JTAG interface.
+
+For the CPLD variant I actually used a EPM7064SLC44-10, because I needed 5V
+logic interface. If you want to attach your cable directly to a device with
+3.3V logic you should choose another CPLD, or add a (fast) level
+translator/driver between the devices.
+
+The cable between CPLD and target should not exceed 10 cm in length.
+
+If you want to debug the CPLD logic, you could load jtag_logic into a larger
+FPGA and embed SignalTap or ChipScope to watch what's happening. 
 
 -----------------------------------------------------------------------------
 
-USB VENDOR/PRODUCT ID: I do not include any vendor/product ID and further
-descriptor setup with the code here, because I myself don't have a vendor ID,
-and I don't want to use Altera's (because this is not an Altera product). I'll
-try to get permission to use my company's ID but that's not here yet.
-
------------------------------------------------------------------------------
-
-HARDWARE: Unfortunately, I do not have the time to present finished schematics
-for either variant of the USB JTAG adapter. As the source is quite incomplete
-anyway, if you're using it you're probably one of those people who easily can
-make up their own schematics. In principle, they are like this (best viewed
-with fixed-width font!). Add power supply, voltage regulator(s), level shifter,
-termination resistors, and more, as required...
-
-Variant A: Cypress FX2 as USB JTAG Adapter, booted from host PC (no EEPROM)
-
-              ____________
-             |            |
-             | Cypress    |
-        USB__| EZ-USB FX2 |__JTAG(TDI,TDO,TCK,TMS)
-             | CY7C68013A |
-             |____________|
-              __|__________
-             |             |
-             | 24 MHz XTAL |
-             |_____________|
-
-
-Variant B: FTDI FT245BM plus EEPROM 93C46 plus CPLD EPM7064
-
-              _________
-             |         |
-             | AT93C46 |
-             |_________|
-              __|__________    _________
-             |             |  |         |
-        USB__| FTDI 245BM  |__| EPM7064 |__JTAG (B_TDO,B_TDI,B_TMS,B_TCK)
-             |_____________|  |_________|
-              __|__________    _|___________
-             |             |  |             |
-             | 6 MHz XTAL  |  | 25 MHz Osc. |
-             |_____________|  |_____________|
-
------------------------------------------------------------------------------
-
-Kolja Waschk, April 2006
+Kolja Waschk, January 2007
 
